Fixed examples = validating

--- a/exercises/1/Text/ex1.html
+++ b/exercises/1/Text/ex1.html
@@ -1,22 +1,25 @@
-<head>
-    <meta charset="UTF-8">
-    <title>Restaurang Vegano</title>
-</head>
-<body>
-    <h1>Restaurang Vegano</h1>
-    <h4><i>Stans enda lunchalternativ</i></h4>
-    <p>Vegano erbjuder helekologiskt och vegetarisk lunchbuffé för endast 69 kronor. Under kvällstid har du som gäst möjlighet att boka ett Vin & Vego-bord med säsongsbetonad meny med passande viner till. Vi är belägna på Vildmåsvägen 111 i Lund, välkomna! Vår lunchmeny finner ni nedan.</p>
-    
-    <h3>Kalla rätter</h3>
-    <ul>
-        <li>Pasta romano</li>
-        <li>Broccolipaj</li>
-        <li>Vegetarisk pastrami</li>
-    </ul>
-    <h3>Varma rätter</h3>
-    <ul>
-        <li>Svamprisotto</li>
-        <li>Ärtlasagne</li>
-        <li>Pasta Arriabata</li>
-    </ul>
-</body>
+<!doctype html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>Restaurang Vegano</title>
+    </head>
+    <body>
+        <h1>Restaurang Vegano</h1>
+        <h4><i>Stans enda lunchalternativ</i></h4>
+        <p>Vegano erbjuder helekologiskt och vegetarisk lunchbuffé för endast 69 kronor. Under kvällstid har du som gäst möjlighet att boka ett Vin & Vego-bord med säsongsbetonad meny med passande viner till. Vi är belägna på Vildmåsvägen 111 i Lund, välkomna! Vår lunchmeny finner ni nedan.</p>
+
+        <h3>Kalla rätter</h3>
+        <ul>
+            <li>Pasta romano</li>
+            <li>Broccolipaj</li>
+            <li>Vegetarisk pastrami</li>
+        </ul>
+        <h3>Varma rätter</h3>
+        <ul>
+            <li>Svamprisotto</li>
+            <li>Ärtlasagne</li>
+            <li>Pasta Arriabata</li>
+        </ul>
+    </body>
+</html>
