Added content and changes to Images-tutorial

--- a/exercises/1/ImagesLinks/ex2.html
+++ b/exercises/1/ImagesLinks/ex2.html
@@ -6,6 +6,7 @@
     <h1>Restaurang Vegano</h1>
     <h4><i>Stans enda lunchalternativ</i></h4>
     <img src="http://www.svenskamassan.se/Global/svenskamassan/bilder/restaurang.jpg" alt="Risotto">
+    <a href="http://www.facebook.com"><h2>Våra öppettider</h2></a>
     <p>Vegano erbjuder helekologiskt och vegetarisk lunchbuffé för endast 69 kronor. Under kvällstid har du som gäst möjlighet att boka ett Vin & Vego-bord med säsongsbetonad meny med passande viner till. Vi är belägna på Vildmåsvägen 111 i Lund, välkomna! Vår lunchmeny finner ni nedan.</p>
     
     <h3>Kalla rätter</h3>
